# auth

./: .env.template  Cargo.toml  Dockerfile  Dockerfile.develop  README.md  cloudbuild.yaml  cloudbuilddeploy.yaml  clouddeploy.yml  docker-compose.yml  skaffold.yaml
entity/src/: prelude.rs  user.rs
k8s/: deployment.yaml  service.yaml
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table_user.rs
postman/: thunder-collection_axum-auth_postman_v2.json  thunder-collection_axum-auth_postman_v3.json
src/: main.rs  routes.rs
src/handlers/: auth.rs  mod.rs  ping.rs  prelude.rs  user_delete.rs  user_login.rs  user_register.rs
src/utils/: create_token.rs  dbconn.rs  mod.rs  prelude.rs
